--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=LXGW+WenKai+Mono+TC&family=Noto+Sans+JP:wght@100..900&family=Noto+Sans+SC:wght@100..900&family=Noto+Sans+TC:wght@100..900&family=Oswald:wght@500&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/webp"href="%PUBLIC_URL%/logo.webp" >
+    <link rel="icon" type="image/png"href="%PUBLIC_URL%/img/logo.png" >
     <title>Fang An Studio</title>
     
     <style>
